--- a/page2.css
+++ b/page2.css
@@ -1,93 +1,76 @@
-nav{
-    padding: 20px 10vw;
-    position: sticky;
+*{
+    margin: 0px;
 }
-.navtext{
-    color: #43ba10;
-    display: inline;
-    border: solid #43ba10 2px;
-    border-left: 0px;
-    border-right: 0px;
 
+/* MENU */
+.container hr{
+    color: #43ba10;
+    height: 3px;
 }
+.container a{
+    color: #43ba10;
+}
+.container ul a:hover{
+    color: white;
+    background-color: #43ba10;
+}
+.container a:hover{
+    color: #43ba10;
+}
+
 .img{
+
     /* For nav image */
     position: relative;
     display: inline;
     float: left;
-    top: -6px;
     
-}
-.logo{
     
-    display: inline;
-}
-
-.menu li:hover{
-    background-color: #43ba10;
-    color: white;
-    padding: 10px 30px;
-    transition:all 0.5s ease-out;
 }
 .cart{
-    padding: 10px 30px;
-    display: inline;
     width: 35px;
     height: 35px;
-    float: left;
-    left: 0px;
+    float: right;
 }
-nav ul{
-    display: inline;
-    float: left;
-}
-.menu li{
-    transition-duration:0.5s;
-    padding: 10px 30px;
-    text-decoration: none;
-    display: inline;
-}
-.menu{
-    display: inline ;
-    position:relative;
-    float:right;
-}
-a.menu1:hover{
-    color: white;
-}
-.menu1{
-    text-decoration: none;
+.navbar-toggler-icon #navbarSupportedContent .navbar-toggler .toggle{
     color: #43ba10;
 }
 
-.quickMeal{
-    text-align: center;
-    border-radius: 10px;
-    border: none 2px solid;
-    width: 30%;
-    height: 40vh;
-    display: inline-block;
-    box-shadow: none 5px 20px 50px;
-    
-   
+div.stnav{
+    position: sticky;
+    top: 0;
+    background-color: white;
 }
-.quickMeal:hover{
-    
-}
-.quickMeal ul{
-display: inline;
+.stnav {
+    z-index: 9999;
 }
 
-.quickMeal li{
+
+/* CARD AND MENU */
+.lower_section{
+    margin-top: 50px;
+}
+.quickmeal{
+    text-align: center;
+}
+.quickmeal h1{
+    color: #43ba10;
+}
+.logo{
+    width: 10vw;
+}
+.quickmeal li{
     list-style: none;
-    margin:5px 40px;
+    /* margin:5px 40px; */
+    margin-right: 20px;
     padding: 10px 0px;
+    border-radius: 10px;
     color:white;
     background-color: #43ba10;
     border:solid 2px white;
     transition: all 0.5s ease-out;
 }
-.quickMeal li:hover{
+.quickmeal li:hover{
     list-style: none;
     margin:5px 40px;
     padding: 10px 0px;
@@ -96,33 +79,29 @@ display: inline;
     border: 2px #43ba10 solid;
     transform: scale(1.1);
     transition: all 0.5s ease-out;
-    
+    transition-timing-function: linear;  
 }
-.quickMeal h1{
-    color: #43ba10;
-}
-.sect1{
-    display: flex;
-    margin: 10vh 10vw;
-    
-}
-.shops{
-    display: inline;
-    background-color:;
-    border-radius: 10px;
-    margin: 0vw 3vw;
-    width:70%;
- 
-}
-.div1{
-    display: flex;
-    justify-content:space-evenly;
-    border-radius: 10px; 
 
+
+
+.btn{
+    background-color: #43ba10;
+    color: white;
+    margin:1vw;
+    border: #43ba10; 
 }
+
+.btn:hover{
+    background-color: white;
+    color: #43ba10;
+    border: #43ba10 2px solid;
+    
+
+} 
+
+
 .card{
-    display: flex;
-    width: 18vw;
+    width: 29%;
     height: 40vh;
     border:2px white solid;
     background-color: white;
@@ -139,21 +118,8 @@ display: inline;
     transform: scale(1.1);
     transition: all 0.5s ease-out;
 }
-.logo{
-    width: 10vw;
-    height: 10vw;
-}
-.btn{
-    background-color: #43ba10;
-    color: white;
-    margin:1vw;
-    border: #43ba10;
-    
-}
-.btn:hover{
-    background-color: white;
-    color: #43ba10;
-    border: #43ba10 2px solid;
-    
 
+.cards{
+    justify-content: center;
+    align-items: center;
 }
