--- a/page2.css
+++ b/page2.css
@@ -134,8 +134,8 @@ div.stnav{
         width: 100%;
     }
     .card{
-        width: 80%;
-        margin-left: 0;
+        width: 90%;
+        margin-left: 10px;
     }
     .cards{
         margin-left: 12px
