--- a/page2.css
+++ b/page2.css
@@ -138,7 +138,7 @@ div.stnav{
         margin-left: 10px;
     }
     .cards{
-        margin-left: 12px
+        margin-left: 10px;
     }
     .logo{
         width: 70%;
