--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 *{
     margin: 0px;
-    padding: 0;
+    padding: 0px;
 }
 /* .image{
     float: right;
@@ -8,25 +8,23 @@
     height: 60vh;
 
 } */
-.main{
-    width: 100vw;
-    height: 90vh;
-   background-size: cover;
+
+.delivery{
+    float: left;
+    position: relative;
+    width: 65px;
     
 }
 .side-image{
     display: inline;
     float: right;
-
-}
-.img{
-    width: 50px;
     position: relative;
-    top: 19px;
-    margin: 10px;
+    right: 0px;
 
 }
+
 .logo{
+   
     display: inline;
     border: 8px solid #497174;
     border-left: 0px;
@@ -44,12 +42,12 @@ font-size: 50px;
 position: relative;
 top: 10vw;
 left: 2vw;
-display: inline;
 }
 .para{
     font-family:sans-serif;
     font-size: 20px;
     margin-left: 15px;
+    display: inline;
 }
 button:hover{
     background-color: white;
@@ -69,8 +67,14 @@ button{
 }
 h1{
     display: inline-block;
+    margin: 1px;
 }
-@media screen and (max-width:450px){
+.logo{
+    position: relative;
+    top: 20px;
+    left: 10px;
+}
+@media screen and (max-width:479px){
     .side-image{
         width: 400px;
         position: absolute;
@@ -78,16 +82,25 @@ h1{
 
     }
     .text{
-        font-size: 40px;
-        position: relative;
+        font-size: 30px;
+        position: absolute;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        top: 50%;
+        top:50%;
+        left: 50px;
     }
     .logo{
         display: inline;
+    }
+    button{
+        margin: 0 10px;
+        padding: 15px 50px;
+        
+    }
+    .sup{
+        padding: 15px 46px;
     }
   
    
