--- a/index.css
+++ b/index.css
@@ -45,9 +45,13 @@ left: 2vw;
 }
 .para{
     font-family:sans-serif;
-    font-size: 20px;
-    margin-left: 15px;
+    font-size: 15px;
+    margin-left: 82px;
     display: inline;
+    border: solid #497174 3px;
+    border-left: 0;
+    border-right: 0;
+    padding: 5px;
 }
 button:hover{
     background-color: white;
@@ -57,7 +61,7 @@ button:hover{
     border: 1px solid #497174;
 }
 button{
-    margin-left: 50px;
+    margin-left: 100px;
     margin-top: 2vw;
     background-color: #497174;
     color: white;
@@ -76,21 +80,21 @@ h1{
 }
 @media screen and (max-width:435px){
     .side-image{
-        width: 300px;
+        width: 420px;
         position: relative;
-        left: 15%;
+        
         bottom: 65px;
 
     }
     .text{
-        font-size: 20px;
+        font-size: 35px;
         position: absolute;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        top:40%;
-        left: 70px;
+        top:55%;
+        left: 30px;
     }
     .logo{
         display: inline;
@@ -100,12 +104,25 @@ h1{
         width: 60px;
     }
     button{
-        margin: 0 2px;
-        padding: 5px 30px;
+        margin: 10px 20px;
+        padding: 10px 30px;
+        
         
     }
     .sup{
-        padding: 5px 26px;
+        margin: 0 20px;
+        padding: 10px 26px;
+        
+    }
+    .para{
+        margin-left: 0px;
+        margin-right: 40px;
+    }
+    .buttons{
+        margin-right: 10%;
+    }
+    .maintext{
+        margin-right: 10%;
     }
   
    
