--- a/page2.css
+++ b/page2.css
@@ -48,7 +48,7 @@ div.stnav{
     z-index: 9999;
 }
 nav{
-    background-color: #497174;
+    background: linear-gradient(to bottom,#497174,rgb(30, 27, 27));
     border-radius: 10px;
     padding: 0 50px;
 }
