--- a/page2.css
+++ b/page2.css
@@ -53,7 +53,7 @@ div.stnav{
     z-index: 9999;
 }
 nav{
-    background: linear-gradient(to bottom,#497174,rgb(30, 27, 27));
+    background: linear-gradient(to bottom,#5f8b8e,rgb(41, 37, 37));
     border-radius: 10px;
     padding: 0 50px;
 }
